# android-opencv-opengl-assessment

./: .gitignore  ANDROID_SETUP.md  DEMO_OUTPUT.md  README.md  mintty.exe.stackdump  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frame_processor.cpp  frame_processor.h  native-lib.cpp
app/src/main/java/com/assessment/edgedetector/: MainActivity.java  NativeLib.java
app/src/main/java/com/assessment/edgedetector/camera/: CameraManager.java
app/src/main/java/com/assessment/edgedetector/gl/: CameraGLSurfaceView.java
app/src/main/java/com/assessment/edgedetector/utils/: FPSCounter.java  PerformanceMonitor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
gl/: FrameRenderer.java  README.md
jni/: README.md
screenshots/web/: CAPTURE_GUIDE.md
web/: README.md  package.json  tsconfig.json
web/src/: frameRenderer.ts  index.html  index.ts  statsManager.ts  types.ts
